<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_date_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:text="@string/posted_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewer_listview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="6dp"
            android:text="@string/listview_item_date"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_reviewer_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:text="@string/reviewer_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewer_listview_reviewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="6dp"
            android:text="@string/listview_item_reviewer"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_category_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:text="@string/category_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewer_listview_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="6dp"
            android:text="@string/listview_item_category"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_nominee_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:text="@string/nominee_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewer_listview_nominee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:paddingStart="6dp"
            android:text="@string/listview_item_nominee"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/review_reviewdata_title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:text="@string/reviewdata_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewer_listview_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/listview_item_review"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>